Travel::Routing::DE::VRR 2.23 - Mon Oct 02 2023

    * Update default API endpoint as the previously used efa.vrr.de/vrr seems
      to be gone for good
    * Rename VRR2 API to VRR and VRR3 to VRR2

Travel::Routing::DE::VRR 2.22 - Fri Sep 01 2023

    * Rewrite code not to use Perl's formerly experimental and now deprecated
      smartmatch features

Travel::Routing::DE::VRR 2.21 - Sat Jul 22 2023

    * Add service VRR3
    * Update service URLs for VVO, VRN
    * Remove discontinued services SVV, TLEM, VBL, Verbundlinie, VOR

Travel::Routing::DE::VRR 2.20 - Fri Mar 26 2021

    * EFA/Route/Part: Add occupancy accessor
    * efa: Show expected occupancy, if available

Travel::Routing::DE::VRR 2.19 - Sat May 02 2020

    * Switch from WTFPL to Perl license (GPL 1+ or Artistic)
    * Update VVO (Verkehrsverbund Oberelbe), VMV (Verkehrsgesellschaft
      Mecklenburg-Vorpommern) and VGN (Verkehrsverbund Grossraum Nürnberg)
      EFA urls
    * Add VAG (Freiburger Verkehrs AG), MVV (Münchner Verkehrs- und
      Tarifverbund), NVBW (Nahverkehrsgesellschaft Baden-Württemberg) services
    * Re-add Verbundlinie (Verkehrsverbund Steiermark) service
    * Remove IVB (Innsbrucker Verkehrsbetriebe) and VRNdelfi services as they
      are no longer available

Travel::Routing::DE::VRR 2.18 - Wed Feb 26 2020

    * Update KVV EFA URL

Travel::Routing::DE::VRR 2.17 - Mon Apr 09 2018

    * Handle routes containing cancelled connections
    * Allow date to be specified as 'tomorrow'

Travel::Routing::DE::VRR 2.16 - Wed Jul 05 2017

    * Fix encoding issues caused by recent API changes

Travel::Routing::DE::VRR 2.15 - Sat Mar 04 2017

    * Remove support for Vorarlberger Verkehrsverbund (VVV) backend
      (no longer working, apparently superseded by non-EFA software)
    * Update EFA URLs for Verkehrsverbund Rhein-Ruhr (VRR2) and
      Verkehrsverbund Rhein-Neckar (VRN) backends
    * Add support for Braunschweiger Verkehrs-GmbH (BSVG)
