@@ -1,3 +1,10 @@
+Travel::Routing::DE::VRR 2.24 - Thu Nov 23 2023
+
+    * efa: Make output less horizontally dense; show arrival and departure
+      delays in-line
+    * EFA::Route::Part: Add arrival_delay and departure_delay accessors
+    * EFA::Route::Part: via: Add delay field to returned list refs
+
 Travel::Routing::DE::VRR 2.23 - Mon Oct 02 2023
 
     * Update default API endpoint as the previously used efa.vrr.de/vrr seems
